<resources>
    <string name="app_name">StudentApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marks_format">Marks: %d</string>
    <string name="grade_note">Grade Note</string>
    <string name="title_content_required">Title and content are required</string>
    <string name="select_teacher">Select a teacher</string>
    <string name="note_saved">Note saved</string>
    <string name="error_saving_note">Failed to save note</string>
    <string name="invalid_marks">Enter valid marks (0–100)</string>
    <string name="note_graded">Note graded</string>
    <string name="error_grading_note">Failed to grade note</string>
    <string name="add_image">Add Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="error_creating_file">Error creating image file</string>
    <string name="error_saving_image">Failed to save image</string>
    <string name="max_images_reached">Maximum 2 images allowed</string>
    <string name="permissions_required">Permissions required to add images</string>
    <string name="attach_images">Attach Images:</string>
    <string name="enter_marks">Enter Marks (0–100)</string>
    <string name="marks_default">Marks: 95</string>
    <string name="save_note">Save Note</string>
    <string name="error_note_not_loaded">Note could not be loaded</string>

    <string name="no_image_selected">No image selected</string>
    <string name="camera_failed">Failed to capture image</string>

    <string name="title_hint">Note Title</string>
    <string name="content_hint">Write your note here…</string>
    <string name="permission_needed">permission needed</string>


        <string name="error_launching_camera">Failed to launch camera</string>
        <string name="error_no_camera_app">No camera app found</string>
        <string name="error_no_gallery_app">No gallery app found</string>
        <string name="error_camera_permission">Camera permission denied</string>


        <string name="image_picker_permission_rationale">This app needs storage and camera permissions to access images and take photos.</string>
        <string name="grant">Grant</string>

    <string name="add_update_marks">Add/Update Marks</string>


        <string name="remove_image">Remove</string>
        <string name="image_removed">Image removed</string>
        <string name="image_added">Image added</string>
        <string name="image_saved">Image saved</string>
        <string name="processing_image">Processing image\u2026</string>

        <string name="error_invalid_image">Invalid image selected</string>
        <string name="error_loading_image">Error loading image</string>

        <string name="error_storage_permission">Storage permission required</string>
    <string name="error_note_not_found">note not found</string>
    <string name="error_loading_note">error loading note</string>
    <string name="add_marks">add marks</string>
    <string name="update_marks">update marks</string>
    <string name="error_unauthorized_action">error Unauthorized action</string>
    <string name="submit_marks">Submit Marks</string>
    <string name="delete_note">Delete Note</string>


    <string-array name="image_picker_options">
        <item>Take Photo</item>
        <item>Choose from Gallery</item>
    </string-array>
</resources>